# fraud_detection_system_ecommerce

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOY_TO_RAILWAY.md  EXTREME_AMOUNT_FIX.md  LICENSE  MERCHANT_UX_IMPROVEMENTS.md  Makefile  PRE_LAUNCH_CHECKLIST.md  PROFESSIONAL_UX_UPDATE.md  PROJECT_DOCUMENTATION.md  README.md  REAL_ECOMMERCE_PATTERNS.md  SECURITY.md  SECURITY_AUDIT_SUMMARY.md  TESTING_GUIDE.md  VALIDATION_REPORT.md  WOOCOMMERCE_READY.md  WORDPRESS_DEBUG_TEST.md  debug_api_requests.py  docker-compose.yml  test_system.sh
backend/: Dockerfile  Procfile  alembic.ini  entrypoint.sh  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements-railway.txt  simple_api.py  vercel_api.py
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  main.py  seed.py
backend/app/middleware/: fallback.py  rate_limiter.py
backend/app/ml/: model_store.py  monitor.py  predict.py  preprocess.py  train.py
backend/app/models/: db.py
backend/app/routers/: audit.py  creditcard_batch.py  dashboard.py  health.py  models.py  predict.py  retrain.py
backend/app/schemas/: audit.py  dashboard.py  training.py  transaction.py
backend/data/: demo_transactions.csv
backend/scripts/: train_creditcard_optimized.py
backend/tests/: conftest.py  test_audit.py  test_ml_pipeline.py  test_predict.py  test_retrain.py
frontend/: .env.production  index.html  nginx.conf  package.json  tsconfig.json  vercel.json
specs/: spec.md
woocommerce-plugin/: ARCHITECTURE_SIMPLE.md  BACKEND_SETUP_FOR_MERCHANTS.md  bulk-check.js  fraud-detection-manual.php  (+1 more)
(+35 files in other folders)
